--- a/libusb-test/libusb_client/CMakeLists.txt
+++ b/libusb-test/libusb_client/CMakeLists.txt
@@ -5,6 +5,7 @@ project(libusb_usb_client)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${PROJECT_NAME}.map")
 ###############################################################################
 find_package(Threads REQUIRED)
 ###############################################################################
